<resources>
    <string name="app_name">DavidPopularMoviesS2</string>

    <!-- API Key -->
    <string name="key_themoviedb"> </string>

    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="tmdb_base_url">http://api.themoviedb.org/3/movie</string>

    <string name="vote_average">4.6</string>
    <string name="rating">Rating:</string>
    <string name="heading_release_date">Release date:</string>
    <string name="title">Movie Title</string>
    <string name="synopsis">Movie Synopsis</string>
    <string name="reviews_button_label">Read reviews</string>
    <string name="review">Movie review here.</string>
    <string name="reviews">Reviews</string>
    <string name="author_label">Author:</string>
    <string name="author">Marcus Aurelius</string>
    <string name="release_date">2012-01-01</string>
    <string name="settings_menu_label">Settings</string>
    <string name="order_pref_title">Order by</string>
    <string name="order_pref_key">order</string>
    <string name="order_pref_favorite_label">My Favorites</string>
    <string name="order_pref_pop_label">Popularity</string>
    <string name="order_pref_pop_value">popular</string>
    <string name="order_pref_favorite_value">favorite</string>
<!-- Next line I spelt "Top Rated" last time, rookie mistake   -->
    <string name="order_pref_rating_value">top_rated</string>
    <string name="order_pref_default">popular</string>
    <string name="order_pref_rating_label">Rating</string>
    <string name="trailer_label">Play trailer</string>
    <string name="play_trailer_description">Play trailer</string>

</resources>
