<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".details.MovieDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/detail_poster_imgV"
            android:layout_width="185dp"
            android:layout_height="278dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/movie_poster_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/background_light" />

        <TextView
            android:id="@+id/title_TextV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/favorite_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_poster_imgV"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/rating_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_TextV" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            tools:text="@string/vote_average"
            app:layout_constraintStart_toEndOf="@+id/rating_label_tv"
            app:layout_constraintTop_toTopOf="@+id/rating_label_tv" />

        <TextView
            android:id="@+id/release_date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/heading_release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_label_tv" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/release_date_label_tv"
            app:layout_constraintTop_toTopOf="@+id/release_date_label_tv"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/synopsis_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
            tools:text="@string/synopsis"/>

        <TextView
            android:id="@+id/trailer_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_label"
            app:layout_constraintBottom_toBottomOf="@+id/play_trailer_button"
            app:layout_constraintStart_toEndOf="@+id/play_trailer_button"
            app:layout_constraintTop_toTopOf="@+id/play_trailer_button"
            tools:text="@string/trailer_label" />

        <ImageButton
            android:id="@+id/play_trailer_button"
            android:layout_width="38dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/play_trailer_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis_tv"
            app:srcCompat="@android:drawable/ic_media_play" />

        <Button
            android:id="@+id/reviews_button"
            android:layout_width="140dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_button_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_trailer_button" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="Add to favorites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_TextV"
            app:srcCompat="@android:drawable/btn_star_big_off" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>